# animex-api

./: .gitattributes  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
apps/animex-site/: Dockerfile  package-lock.json  package.json
services/anime/: .dockerignore  .env.template  Dockerfile  main.py  pyproject.toml
services/anime/controllers/: AnimeController.py
services/anime/enums/: BroadcastType.py  TopAnimeType.py
services/anime/models/: Anime.py  Broadcast.py  Demographics.py  Production.py  Stats.py  Title.py  TopAnimeItem.py  Urls.py  __init__.py
services/anime/models/Anime/: AnimeModel.py
services/anime/models/Anime/schemas/: BroadcastSchema.py  DemographicsSchema.py  ProductionSchema.py  StatsSchema.py  UrlsSchema.py
services/anime/models/AnimeModel/schemas/: StatsSchema.py  TitleSchema.py
services/anime/responses/: AnimeResponse.py
services/anime/routes/: AnimeRouter.py
services/anime/services/: redis.py
services/anime/utils/: cache.py  process_data.py
services/search/: Dockerfile  package.json  tsconfig.json
services/search/src/: main.ts
