[tool.poetry]
name = "animex-api-anime"
version = "0.1.0"
description = ""
authors = ["perquis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
