[tool.poetry]
name = "animex-api-anime"
version = "0.1.0"
description = ""
authors = ["perquis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.8.2"
redis = "^5.0.7"
fastapi-limiter = "^0.1.6"
secweb = "^1.11.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
